--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="en"><head>
   <!-- Google tag (gtag.js) -->
-  <script async="" src="js/cwr.js"></script><script async="" src="js/gtm.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-B04DST2RC6"></script>
+  <script async="" src="cwr.js"></script><script async="" src="gtm.js"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=G-B04DST2RC6"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
@@ -25,24 +25,24 @@
   <title>DeepFake-Detect</title>
 
   <!-- Favicons -->
-  <link href="images/favicon.png" rel="icon">
-  <link href="images/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="favicon.png" rel="icon">
+  <link href="apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link href="css/icofont.min.css" rel="stylesheet">
-  <link href="css/boxicons.min.css" rel="stylesheet">
-  <link href="css/owl.carousel.min.css" rel="stylesheet">
-  <link href="css/venobox.css" rel="stylesheet">
-  <link href="css/aos.css" rel="stylesheet">
+  <link href="bootstrap.min.css" rel="stylesheet">
+  <link href="icofont.min.css" rel="stylesheet">
+  <link href="boxicons.min.css" rel="stylesheet">
+  <link href="owl.carousel.min.css" rel="stylesheet">
+  <link href="venobox.css" rel="stylesheet">
+  <link href="aos.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/uppload.css" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/light.css" crossorigin="anonymous">
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="uppload.css" crossorigin="anonymous">
+  <link rel="stylesheet" href="light.css" crossorigin="anonymous">
   <style> .need-help-link { display: none; } .uppload-modal section { padding: 0; }</style>
   <!-- =======================================================
   * Template Name: Appland - v2.0.0
@@ -92,7 +92,7 @@
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up" style="padding-left: 20px;">
-          <img src="images/DeepfakeDetection_Facebook.gif" class="img-fluid" alt="" id="image-output" style="width: fit-content; margin: auto;">
+          <img src="DeepfakeDetection_Facebook.gif" class="img-fluid" alt="" id="image-output" style="width: fit-content; margin: auto;">
           <p id="image-credits" style="font-size: 10px; text-align: end; margin-top: 5px;">Image credits: <a href="https://ai.facebook.com/blog/deepfake-detection-challenge-results-an-open-initiative-to-advance-ai/">Facebook AI</a></p>
           <div id="result-div" style="display: none; margin-top: 20px;">
             <label>Prediction Result:</label>
@@ -116,18 +116,18 @@
         </div>
 
         <div class="owl-carousel gallery-carousel" data-aos="fade-up">
-          <a href="assets/img/gallery/gallery-1.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-1.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-2.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-2.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-3.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-3.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-4.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-4.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-5.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-5.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-6.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-6.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-7.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-7.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-8.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-8.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-9.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-9.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-10.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-10.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-11.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-11.png" alt=""></a>
-          <a href="assets/img/gallery/gallery-12.png" class="venobox" data-gall="gallery-carousel"><img src="images/gallery-12.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-1.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-1.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-2.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-2.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-3.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-3.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-4.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-4.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-5.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-5.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-6.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-6.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-7.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-7.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-8.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-8.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-9.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-9.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-10.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-10.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-11.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-11.png" alt=""></a>
+          <a href="assets/img/gallery/gallery-12.png" class="venobox" data-gall="gallery-carousel"><img src="gallery-12.png" alt=""></a>
         </div>
 
       </div>
@@ -153,7 +153,7 @@
               <li><i class="icofont-check"></i> Regularization: L2 with 0.001 rate</li>
             </ul>
             <p>
-              <img src="images/results.png" style="max-width: 100%;">
+              <img src="results.png" style="max-width: 100%;">
             </p>
             <ul>
               <li><i class="icofont-check"></i> Accuracy: 96.36%</li>
@@ -188,17 +188,17 @@
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
 
   <!-- Vendor JS Files -->
-  <script src="js/jquery.min.js"></script>
-  <script src="js/bootstrap.bundle.min.js"></script>
-  <script src="js/jquery.easing.min.js"></script>
-  <script src="js/validate.js"></script>
-  <script src="js/owl.carousel.min.js"></script>
-  <script src="js/venobox.min.js"></script>
-  <script src="js/aos.js"></script>
+  <script src="jquery.min.js"></script>
+  <script src="bootstrap.bundle.min.js"></script>
+  <script src="jquery.easing.min.js"></script>
+  <script src="validate.js"></script>
+  <script src="owl.carousel.min.js"></script>
+  <script src="venobox.min.js"></script>
+  <script src="aos.js"></script>
   
   <!-- Template Main JS File -->
-  <script src="js/main.js"></script>
-  <script src="js/browser.js" crossorigin="anonymous"></script>
+  <script src="main.js"></script>
+  <script src="browser.js" crossorigin="anonymous"></script>
   <script>
     var uploader = new window.uppload_Uppload({
           lang: window.uppload_en,
