--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>DeepFake-Detect</title>
+  <title>Deep Fake </title>
 
   <!-- Favicons -->
   <link href="favicon.png" rel="icon">
@@ -63,7 +63,7 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="/">DFDetect</a></h1>
+        <h1 class="text-light"><a href="/">Detection</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
