--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Deep Fake </title>
+  <title>🔨 Deep fake🔨 </title>
 
   <!-- Favicons -->
   <link href="favicon.png" rel="icon">
@@ -63,7 +63,8 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="/">Detection</a></h1>
+        <h1 class="text-light"><a href="/">𝕯𝖊𝖊𝖕 𝖋𝖆𝖐𝖊 𝕯𝖊𝖙𝖊𝖈𝖙𝖎𝖔𝖓 𝕸𝖔𝖉𝖊𝖑 𝖋𝖔𝖗 𝕽𝖆𝖏𝖆𝖘𝖙𝖍𝖆𝖓 𝕻𝖔𝖎𝖑𝖈𝖊
+</a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -159,7 +160,7 @@
               <li><i class="icofont-check"></i> Accuracy: 96.36%</li>
               <li><i class="icofont-check"></i> Precision: 94.95%</li>
               <li><i class="icofont-check"></i> Recall: 97.94%</li>
-              <li><i class="icofont-check"></i> We have achieved better results than XceptionNet and MesoNet based on a <a href="http://kaldir.vc.in.tum.de/faceforensics_benchmark/">public deepfake detection benchmark</a></li>
+              <li><i class="icofont-check"></i> We have achieved better results <a href="#">public deepfake detection </a></li>
             </ul>
           </div>
         </div>
@@ -173,14 +174,14 @@
   <footer id="footer">
     <div class="container py-4">
       <div class="copyright">
-        <strong><a href="https://github.com/aaronchong888/DeepFake-Detect">GitHub</a>
+        <strong><a href="https://www.linkedin.com/in/sacsoft/">Linkedin</a>
       </strong></div><strong>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-bootstrap-app-landing-page-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designed by <a href="https://sachin-portfolio777.netlify.app/">©️💖SACHIN💖</a>
       </div>
     </strong></div><strong>
   </strong></footer><!-- End Footer --><strong>
