--- a/index.html
+++ b/index.html
@@ -87,9 +87,11 @@
       <div class="row">
         <div class="col-lg-6 d-lg-flex flex-lg-column justify-content-center align-items-stretch pt-5 pt-lg-0 order-2 order-lg-1" data-aos="fade-up">
           <div>
-            <h1>DeepFake Detect</h1>
-            <h2>Upload an image to test for possible deepfakes</h2>
-            <a class="btn btn-light btn-lg uppload-button"> Get Started</a>
+            <h1>𝓣𝓱𝓪𝓷𝓴𝓼 𝓡𝓪𝓳.𝓟𝓸𝓵𝓲𝓬𝓮 𝓯𝓸𝓻 𝓖𝓲𝓿𝓲𝓷𝓰 𝓞𝓹𝓹𝓸𝓻𝓽𝓾𝓷𝓲𝓽𝔂</h1>
+            <h2>
+𝕊𝕡𝕖𝕔𝕚𝕒𝕝 𝕋𝕙𝕒𝕟𝕜𝕤 𝕥𝕠 𝕄𝕖𝕟𝕥𝕠𝕣𝕤🤗
+</h2>
+            <a class="btn btn-light btn-lg uppload-button"> 𝓖𝓮𝓽 𝓢𝓽𝓪𝓻𝓽𝓮𝓭🎬</a>
           </div>
         </div>
         <div class="col-lg-6 d-lg-flex flex-lg-column align-items-stretch order-1 order-lg-2 hero-img" data-aos="fade-up" style="padding-left: 20px;">
