--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container d-flex">
 
       <div class="logo mr-auto">
-        <h1 class="text-light"><a href="/">𝕯𝖊𝖊𝖕 𝖋𝖆𝖐𝖊 𝕯𝖊𝖙𝖊𝖈𝖙𝖎𝖔𝖓 𝕸𝖔𝖉𝖊𝖑 𝖋𝖔𝖗 𝕽𝖆𝖏𝖆𝖘𝖙𝖍𝖆𝖓 𝕻𝖔𝖎𝖑𝖈𝖊
+        <h1 class="text-light"><a href="/">👮🏻𝕯𝖊𝖊𝖕 𝖋𝖆𝖐𝖊 𝕯𝖊𝖙𝖊𝖈𝖙𝖎𝖔𝖓 𝕸𝖔𝖉𝖊𝖑 𝖋𝖔𝖗 𝕽𝖆𝖏𝖆𝖘𝖙𝖍𝖆𝖓 𝕻𝖔𝖎𝖑𝖈𝖊👮🏻
 </a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -114,7 +114,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>Prediction Results</h2>
+          <h2>𝓟𝓻𝓮𝓭𝓲𝓬𝓽𝓲𝓸𝓷 𝓡𝓮𝓼𝓾𝓵𝓽𝓼</h2>
           <p>Sample prediction results produced by our deepfake detection model</p>
         </div>
 
